--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "github-profile",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://eduardogr.github.io/eduardogr.github.io",
+  "homepage": "https://eduardogr.github.io/",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.7.0",
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
