--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "private": true,
   "homepage": "https://eduardogr.github.io/",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "gh-pages": "^2.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1",
     "react-jss": "^8.6.1",
     "react-redux": "^6.0.0",
+    "react-scripts": "3.4.1",
     "redux": "^4.0.1"
   },
   "scripts": {
