--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "github-profile",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://eduardogr.github.io/",
+  "homepage": "https://eduardogr.com",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
